edited the mobile logo

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 				<img src="assets/icons/programming-icons/hamburgerwhite.png" class="hamburger_icon_img pointer">
 			</div>
 			<div class="menu_logo">
-				<img src="assets/Logo/Standard Logo Files/green james logo color change.png" class="menu_logo_img pointer">
+				<img src="assets/Logo/Standard Logo Files/green james logo color change.png" class="menu_logo_img pointer shown_logo">
+				<img src="assets/Logo/Standard Logo Files/White on Transparent.png" class="menu_logo_img pointer hidden_logo">
 			</div>
 			<ul class="header_tabs_list">
 				<li class="header_tabs inline pointer">Home</li>
