--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				<div class="overlay_container">
 					<div class="work_image fourth_img pointer hover_animation"></div>
 					<div class="overlay_button_container small_overlay pointer">
-						<div class="overlay_button"><a href="https://jamesjaydev.github.io/hangman-game/" class="text_white">Hangman Game</a></div>
+						<div class="overlay_button"><a href="https://jamesjaydev.github.io/hangman-game/" target="_blank" class="text_white">Hangman Game</a></div>
 					</div>
 				</div>
 			</div>
