updated links again

--- a/index.html
+++ b/index.html
@@ -217,17 +217,17 @@
 </form> 
 <div class="footer_icons_container flex_row">
 	<div class="footer_icon">
-		<a href="#"><img src="assets/icons/programming-icons/facebook.png" class="responsive_img"></a>
+		<a href="https://www.facebook.com/designsbyjannetti/"><img src="assets/icons/programming-icons/facebook.png" class="responsive_img"></a>
 	</div>
 	<div class="footer_icon">
-		<a href="#"><img src="assets/icons/programming-icons/github.png" class="responsive_img"></a>
+		<a href="https://github.com/Jamesjaydev"><img src="assets/icons/programming-icons/github.png" class="responsive_img"></a>
 	</div>
 	<div class="footer_icon">
-		<a href="#"><img src="assets/icons/programming-icons/linkedin.png" class="responsive_img"></a>
+		<a href="https://www.linkedin.com/in/james-jannetti/"><img src="assets/icons/programming-icons/linkedin.png" class="responsive_img"></a>
 	</div>
-	<div class="footer_icon">
+<!-- 	<div class="footer_icon">
 		<a href="#"><img src="assets/icons/programming-icons/youtube.png" class="responsive_img"></a>
-	</div>
+	</div> -->
 </div>
 </footer>
 
