updated title and meta tags

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>James Jannetti Portfolio</title>
+	<title>James Jannetti | Full Stack Developer</title>
 	<!-- Meta Tags -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="James Jannetti is a for hire professional Freelance Full Stack Web Developer skilled in HTML5, CSS3, JavaScript, and much more.">
-	<meta name="keywords" content="HTML,CSS,XML,JavaScript">
+	<meta name="description" content="James Jannetti is a professional Freelance Full Stack Web Developer skilled in HTML5, CSS3, JavaScript, Nodejs, Shopify Devlopment and much more. ">
+	<meta name="keywords" content="HTML,CSS,JavaScript, Nodejs, Shopify">
 	<meta name="author" content="James Jannetti">
 	<!-- Firebase App -->
 <script src="https://www.gstatic.com/firebasejs/5.7.0/firebase-app.js"></script>
