disabled the learn more button

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 		<div class="text_block">
 			<h1 class="large_header bold">About Me</h1>
 			<p class="description">Before we begin to make your story, I feel It is important for me to tell you mine. My name is James and I'm a passionate Full-Stack Web Developer based out of New York City. I am skilled in languages such HTML5, CSS3, JavaScript, NodeJs, MongoDb/MySQL as well as development platforms such as Shopify and Wordpress. My mission is to build you a beautiful, sleek, and customizeable website that best explains your personal or business objectives to the online world. I have experience working with clients such as artists, entrepreneurs, and small/large businesses. I also am available for hire, whether it be temporary (project based) or permanent.</p>
-			<div style="margin-top: 48px;">
+<!-- 			<div style="margin-top: 48px;">
 				<a href="#" class="text_white text_center menu_button pointer text_center">Learn More</a>
-			</div>
+			</div> -->
 		</div>
 	</div>
 	<!-- My Work -->
