--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="overlay_container">
                     <div class="work_image second_img pointer hover_animation"></div>
                     <div class="overlay_button_container large_overlay pointer">
-                        <div class="overlay_button"><a href="https://www.jessicalondon.com/" class="text_white" target="_blank">Jessica London/a></div>
+                        <div class="overlay_button"><a href="https://www.jessicalondon.com/" class="text_white" target="_blank">Jessica London</a></div>
                     </div>
                 </div>
             </div>
