--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
                             <!-- Main Js File -->
                             <script src="main.js"></script>
                             <script type="text/javascript">
-                            ScrollReveal().reveal('.services_img', { delay: 500 });
-                            ScrollReveal().reveal('.overlay_container', { delay: 500 });
+                            ScrollReveal().reveal('.services_img', { delay: 500, mobile: false });
+                            ScrollReveal().reveal('.overlay_container', { delay: 500, mobile: false });
                             </script>
 </body>
 
